examples/good/lambda-as-argument.bg
(var apply [(var f) (var v)]
  (f v))

(apply (int [(int x)] (+ x 1)) 41)
