examples/bad/return-type-not-match-int-var.bg
(var t True)
(int x [] t)
(x) # Runtime exception
